# ai-eng

./: pyproject.toml
basics/python/: e-commerce.py  lib.py  main.py  oop.py
notebooks/: chatbot.ipynb  gemini.ipynb  gpt.ipynb  grok.ipynb  l2.ipynb  l3.ipynb  l4.ipynb  l5.ipynb  order-chatbot.ipynb
