[project]
name = "ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "panel>=1.5.0",
    "jupyter-bokeh>=4.0.0",
    "nbstripout>=0.9.0",
    "google-genai>=2.10.0",
]
